# dig-chainsource-interface

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SPEC.md
.github/workflows/: ci.yml  publish.yml  release.yml
.gitnexus/: lbug.wal
.gitnexus/parsedfile-cache/c703b4c23698fd3162c4613cd3fc597f59882aaa685631925cfdebbea5978be5/: c703b4c23698fd3162c4613cd3fc597f59882aaa685631925cfdebbea5978be5-w1-0.json
src/: error.rs  lib.rs  lineage.rs  provider.rs  record.rs  source.rs  testing.rs
tests/: kat.rs  parent_walk_capability.rs
